--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -73,7 +73,7 @@
      <rect>
       <x>80</x>
       <y>210</y>
-      <width>21</width>
+      <width>311</width>
       <height>20</height>
      </rect>
     </property>
@@ -280,7 +280,7 @@
      <string/>
     </property>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>10</x>
